return, don't assert, on incidence fetch failure

these asserts get compiled out of production builds, and it is indeed
possible with Akonadi, at least currently, to get null results back.
so just live with that.

BUG:265287